--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,13 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
-      - name: Run ESLint
-        run: npm run lint
+      - name: (Server) Run ESLint
+        run: yarn lint:server
+        
+      - name: (Web) Run ESLint
+        run: yarn lint:web
 
   typescript:
     name: TypeScript
@@ -32,7 +35,10 @@ jobs:
           node-version: 16
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
-      - name: TypeScript Compiler
-        run: npm run build
+      - name: (Server) TypeScript Compiler
+        run: yarn build:server
+      
+      - name: (Web) TypeScript Compiler
+        run: yarn build:web
