--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-	"name": "project-template",
+	"name": "proton",
 	"version": "1.0.0",
-	"description": "Personal project template by DaanGamesDG",
+	"description": "Proton, a shareX/File upload/shortlink server with multi-user support and packed with a lot of cool features!",
 	"main": "dist/index.js",
 	"author": "DaanGamesDG <daan@daangamesdg.wtf>",
 	"license": "MIT",
 	"private": false,
 	"dependencies": {
 		"@prisma/client": "^3.1.1",
+		"@agney/react-loading": "^0.1.2",
+		"@tippyjs/react": "^4.2.5",
 		"argon2": "^0.28.2",
 		"axios": "^0.21.4",
 		"body-parser": "^1.19.0",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.1.1",
-		"eslint": "^7.30.0",
 		"express": "^4.17.1",
 		"mime-types": "^2.1.32",
 		"minisearch": "^3.1.0",
 		"nanoid": "^3.1.28",
-		"typescript": "^4.4.3",
 		"uuid": "^8.3.2",
-		"@agney/react-loading": "^0.1.2",
-		"@tippyjs/react": "^4.2.5",
 		"copy-to-clipboard": "^3.3.1",
 		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
