ci: added prisma:generate script

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
 		"dev:web": "next dev",
 		"build:web": "next build",
 		"start:web": "next start",
-		"lint:web": "next lint --quiet"
+		"lint:web": "next lint --quiet",
+		"prisma:generate": "prisma generate"
 	},
 	"devDependencies": {
 		"@types/body-parser": "^1.19.1",
