--- a/package.json
+++ b/package.json
@@ -7,25 +7,24 @@
 	"license": "MIT",
 	"private": false,
 	"dependencies": {
-		"@prisma/client": "^3.1.1",
 		"@agney/react-loading": "^0.1.2",
+		"@prisma/client": "^3.1.1",
 		"@tippyjs/react": "^4.2.5",
 		"argon2": "^0.28.2",
 		"axios": "^0.21.4",
 		"body-parser": "^1.19.0",
 		"cookie-parser": "^1.4.5",
+		"copy-to-clipboard": "^3.3.1",
 		"cors": "^2.8.5",
 		"crypto-js": "^4.1.1",
 		"express": "^4.17.1",
-		"mime-types": "^2.1.32",
-		"minisearch": "^3.1.0",
-		"nanoid": "^3.1.28",
-		"uuid": "^8.3.2",
-		"copy-to-clipboard": "^3.3.1",
 		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
+		"mime-types": "^2.1.32",
+		"minisearch": "^3.1.0",
 		"moment": "^2.29.1",
+		"nanoid": "^3.1.28",
 		"next": "11.1.2",
 		"react": "17.0.2",
 		"react-cookie": "^4.1.1",
@@ -33,6 +32,7 @@
 		"react-notifications-component": "^3.1.0",
 		"react-select": "^5.0.0",
 		"sass": "^1.42.1",
+		"uuid": "^8.3.2",
 		"yup": "^0.32.9"
 	},
 	"scripts": {
@@ -52,17 +52,18 @@
 		"@types/cors": "^2.8.12",
 		"@types/crypto-js": "^4.0.2",
 		"@types/express": "^4.17.13",
-		"@types/mime-types": "^2.1.1",
-		"@types/uuid": "^8.3.1",
 		"@types/file-saver": "^2.0.3",
+		"@types/mime-types": "^2.1.1",
+		"@types/node": "^16.3.1",
 		"@types/react": "17.0.24",
 		"@types/react-notifications-component": "^3.1.1",
 		"@types/sass": "^1.16.1",
-		"@types/node": "^16.3.1",
+		"@types/uuid": "^8.3.1",
 		"@typescript-eslint/eslint-plugin": "^4.28.2",
 		"@typescript-eslint/parser": "^4.28.2",
 		"eslint": "7.32.0",
 		"eslint-config-next": "11.1.2",
+		"prisma": "^3.1.1",
 		"typescript": "4.4.3"
 	}
 }
