--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"next": "11.1.2",
 		"react": "17.0.2",
 		"react-cookie": "^4.1.1",
+		"react-device-detect": "^2.0.0",
 		"react-dom": "17.0.2",
 		"react-notifications-component": "^3.1.0",
 		"react-select": "^5.0.0",
