--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@agney/react-loading": "^0.1.2",
 		"@prisma/client": "^3.1.1",
 		"@tippyjs/react": "^4.2.5",
+		"@types/mv": "^2.1.2",
 		"argon2": "^0.28.2",
 		"axios": "^0.21.4",
 		"body-parser": "^1.19.0",
@@ -24,6 +25,8 @@
 		"mime-types": "^2.1.32",
 		"minisearch": "^3.1.0",
 		"moment": "^2.29.1",
+		"multer": "^1.4.3",
+		"mv": "^2.1.1",
 		"nanoid": "^3.1.28",
 		"next": "11.1.2",
 		"react": "17.0.2",
@@ -55,6 +58,7 @@
 		"@types/express": "^4.17.13",
 		"@types/file-saver": "^2.0.3",
 		"@types/mime-types": "^2.1.1",
+		"@types/multer": "^1.4.7",
 		"@types/node": "^16.3.1",
 		"@types/react": "17.0.26",
 		"@types/react-notifications-component": "^3.1.1",
