--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-cookie": "^4.1.1",
 		"react-device-detect": "^2.0.0",
 		"react-dom": "17.0.2",
+		"react-dropzone": "^11.4.2",
 		"react-notifications-component": "^3.1.0",
 		"react-select": "^5.0.0",
 		"sass": "^1.42.1",
