--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@agney/react-loading": "^0.1.2",
 		"@prisma/client": "^3.1.1",
 		"@tippyjs/react": "^4.2.5",
+		"@types/express-rate-limit": "^5.1.3",
 		"argon2": "^0.28.2",
 		"axios": "^0.22.0",
 		"body-parser": "^1.19.0",
@@ -18,6 +19,7 @@
 		"cors": "^2.8.5",
 		"crypto-js": "^4.1.1",
 		"express": "^4.17.1",
+		"express-rate-limit": "^5.4.0",
 		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^4.1.17",
