--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,46 @@
 {
-	"compilerOptions": {
-		"lib": ["ES2020"],
-		"target": "ES2020",
-		"module": "CommonJS",
-		"outDir": "./dist",
-		"types": ["node"],
-		"skipLibCheck": true,
-		"incremental": false,
-		"inlineSourceMap": true,
-		"declaration": false,
-		"allowJs": true,
-		"strict": true,
-		"noImplicitAny": true,
-		"strictNullChecks": true,
-		"strictBindCallApply": true,
-		"strictPropertyInitialization": true,
-		"noImplicitThis": true,
-		"alwaysStrict": true,
-		"noFallthroughCasesInSwitch": true,
-		"pretty": true,
-		"experimentalDecorators": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"esModuleInterop": true,
-		"useUnknownInCatchVariables": false,
-		"noEmit": true,
-		"moduleResolution": "node",
-		"isolatedModules": true,
-		"jsx": "preserve"
-	},
-	"exclude": ["node_modules", "src"],
-	"include": ["./src/**/*", "./server/**/*", "./settings.ts"]
+  "compilerOptions": {
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "module": "CommonJS",
+    "outDir": "./dist",
+    "types": [
+      "node"
+    ],
+    "skipLibCheck": true,
+    "incremental": false,
+    "inlineSourceMap": true,
+    "declaration": false,
+    "allowJs": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "noFallthroughCasesInSwitch": true,
+    "pretty": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "useUnknownInCatchVariables": false,
+    "moduleResolution": "node",
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "noEmit": true
+  },
+  "exclude": [
+    "node_modules"
+  ],
+  "include": [
+    "./src/**/*",
+    "./server/**/*",
+    "./settings.ts"
+  ]
 }
