--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"private": false,
 	"dependencies": {
 		"@agney/react-loading": "^0.1.2",
+		"@daangamesdg/logger": "^1.1.0",
 		"@prisma/client": "^3.2.1",
 		"@tippyjs/react": "^4.2.5",
 		"argon2": "^0.28.2",
@@ -56,13 +57,13 @@
 		"@types/cors": "2.8.12",
 		"@types/crypto-js": "4.0.2",
 		"@types/express": "4.17.13",
+		"@types/express-rate-limit": "5.1.3",
 		"@types/file-saver": "2.0.3",
 		"@types/mime-types": "2.1.1",
 		"@types/multer": "1.4.7",
 		"@types/node": "16.10.2",
 		"@types/react": "17.0.30",
 		"@types/react-notifications-component": "3.1.1",
-		"@types/express-rate-limit": "5.1.3",
 		"@types/sass": "1.16.1",
 		"@types/uuid": "8.3.1",
 		"@typescript-eslint/eslint-plugin": "5.0.0",
