--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
 	"name": "paperplane",
+	"main": "server/index.js",
 	"scripts": {
-		"dev": "next dev",
+		"dev": "NODE_ENV=development nodemon .",
+		"dev:web": "next dev",
 		"build": "next build",
-		"start": "next start",
+		"start": "node .",
 		"lint": "next lint",
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"express": "^4.17.2",
 		"next": "12.0.7",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"sass": "^1.45.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^15.0.0",
@@ -24,6 +28,7 @@
 		"eslint-config-next": "12.0.7",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.1.3",
+		"nodemon": "^2.0.15",
 		"typescript": "4.5.4"
 	},
 	"packageManager": "yarn@3.1.1"
