--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@prisma/client": "^3.6.0",
 		"express": "^4.17.2",
 		"next": "12.0.7",
 		"react": "17.0.2",
@@ -29,6 +30,7 @@
 		"husky": "^7.0.4",
 		"lint-staged": "^12.1.3",
 		"nodemon": "^2.0.15",
+		"prisma": "^3.6.0",
 		"typescript": "4.5.4"
 	},
 	"packageManager": "yarn@3.1.1"
