--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
 		"noUnusedParameters": false
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-	"exclude": ["node_modules", "server"]
+	"exclude": ["node_modules"]
 }
