--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^3.6.0",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
 		"next": "12.0.7",
 		"react": "17.0.2",
