--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@daangamesdg/logger": "^1.1.0",
 		"@prisma/client": "^3.6.0",
 		"axios": "^0.24.0",
 		"dotenv": "^10.0.0",
