--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
 		"next": "12.0.7",
+		"prompts": "^2.4.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"sass": "^1.45.0"
