--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"axios": "^0.24.0",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
+		"framer-motion": "^5.5.5",
 		"next": "12.0.7",
 		"prompts": "^2.4.2",
 		"react": "17.0.2",
