--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
 		"framer-motion": "^5.5.5",
+		"moment": "^2.29.1",
 		"next": "12.0.7",
 		"prompts": "^2.4.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-select": "^5.2.1",
 		"sass": "^1.45.0"
 	},
 	"devDependencies": {
