--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
 		"framer-motion": "^5.5.5",
+		"mime-types": "^2.1.34",
+		"minisearch": "^3.2.0",
 		"moment": "^2.29.1",
 		"next": "12.0.7",
 		"prompts": "^2.4.2",
@@ -31,6 +33,7 @@
 		"@sapphire/eslint-config": "^4.0.8",
 		"@sapphire/prettier-config": "^1.2.7",
 		"@sapphire/ts-config": "^3.1.6",
+		"@types/mime-types": "^2.1.1",
 		"@types/node": "17.0.1",
 		"@types/react": "17.0.37",
 		"eslint": "8.5.0",
