--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"prompts": "^2.4.2",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-notifications-component": "^3.1.0",
 		"react-select": "^5.2.1",
 		"sass": "^1.45.0"
 	},
@@ -36,6 +37,7 @@
 		"@types/mime-types": "^2.1.1",
 		"@types/node": "17.0.1",
 		"@types/react": "17.0.37",
+		"@types/react-notifications-component": "^3.1.1",
 		"eslint": "8.5.0",
 		"eslint-config-next": "12.0.7",
 		"husky": "^7.0.4",
