--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
 	"dependencies": {
 		"@daangamesdg/logger": "^1.1.0",
 		"@prisma/client": "^3.6.0",
+		"@tippyjs/react": "^4.2.6",
 		"axios": "^0.24.0",
+		"copy-to-clipboard": "^3.3.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
+		"file-saver": "^2.0.5",
 		"framer-motion": "^5.5.5",
 		"mime-types": "^2.1.34",
 		"minisearch": "^3.2.0",
@@ -23,6 +26,7 @@
 		"next": "12.0.7",
 		"prompts": "^2.4.2",
 		"react": "17.0.2",
+		"react-device-detect": "^2.1.2",
 		"react-dom": "17.0.2",
 		"react-notifications-component": "^3.1.0",
 		"react-select": "^5.2.1",
@@ -34,6 +38,7 @@
 		"@sapphire/eslint-config": "^4.0.8",
 		"@sapphire/prettier-config": "^1.2.7",
 		"@sapphire/ts-config": "^3.1.6",
+		"@types/file-saver": "^2.0.4",
 		"@types/mime-types": "^2.1.1",
 		"@types/node": "17.0.1",
 		"@types/react": "17.0.37",
