feat: add edit link modal

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
 		"file-saver": "^2.0.5",
+		"formik": "^2.2.9",
 		"framer-motion": "^5.5.5",
 		"mime-types": "^2.1.34",
 		"minisearch": "^3.2.0",
@@ -30,7 +31,9 @@
 		"react-dom": "17.0.2",
 		"react-notifications-component": "^3.1.0",
 		"react-select": "^5.2.1",
-		"sass": "^1.45.0"
+		"react-spinners": "^0.11.0",
+		"sass": "^1.45.0",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^15.0.0",
