--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
 		"incremental": true,
 		"noUnusedParameters": false
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+	"include": ["next-env.d.ts", "global.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
 }
