--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
 		"next": "12.0.7",
 		"prompts": "^2.4.2",
 		"react": "17.0.2",
+		"react-color": "^2.19.3",
 		"react-device-detect": "^2.1.2",
 		"react-dom": "17.0.2",
 		"react-notifications-component": "^3.1.0",
 		"react-select": "^5.2.1",
 		"react-spinners": "^0.11.0",
+		"react-switch": "^6.0.0",
 		"sass": "^1.45.0",
 		"yup": "^0.32.11"
 	},
