--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"mime-types": "^2.1.34",
 		"minisearch": "^3.2.0",
 		"moment": "^2.29.1",
+		"multer": "^1.4.4",
 		"next": "12.0.7",
 		"prompts": "^2.4.2",
 		"react": "17.0.2",
@@ -45,6 +46,7 @@
 		"@sapphire/ts-config": "^3.1.6",
 		"@types/file-saver": "^2.0.4",
 		"@types/mime-types": "^2.1.1",
+		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.1",
 		"@types/react": "17.0.37",
 		"@types/react-notifications-component": "^3.1.1",
