--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"minisearch": "^3.2.0",
 		"moment": "^2.29.1",
 		"multer": "^1.4.4",
+		"nanoid": "^3.1.30",
 		"next": "12.0.7",
 		"prompts": "^2.4.2",
 		"react": "17.0.2",
