--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"build": "next build",
 		"start": "node .",
 		"lint": "next lint",
+		"prisma:generate": "prisma generate",
+		"prisma:install": "prisma db push",
 		"prepare": "husky install"
 	},
 	"dependencies": {
@@ -56,7 +58,7 @@
 		"husky": "^7.0.4",
 		"lint-staged": "^12.1.3",
 		"nodemon": "^2.0.15",
-		"prisma": "^3.6.0",
+		"prisma": "^3.7.0",
 		"typescript": "4.5.4"
 	},
 	"packageManager": "yarn@3.1.1"
