--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.1",
 		"@types/react": "17.0.37",
+		"@types/react-color": "^3.0.6",
 		"@types/react-notifications-component": "^3.1.1",
 		"eslint": "8.5.0",
 		"eslint-config-next": "12.0.7",
