--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-color": "^2.19.3",
 		"react-device-detect": "^2.1.2",
 		"react-dom": "17.0.2",
+		"react-dropzone": "^11.4.2",
 		"react-notifications-component": "^3.1.0",
 		"react-select": "^5.2.1",
 		"react-spinners": "^0.11.0",
