--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@prisma/client": "^3.6.0",
 		"@tippyjs/react": "^4.2.6",
 		"axios": "^0.24.0",
+		"body-parser": "^1.19.1",
 		"copy-to-clipboard": "^3.3.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
