--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"copy-to-clipboard": "^3.3.1",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.2",
+		"express-rate-limit": "^6.0.1",
 		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^5.5.5",
