--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": "next/core-web-vitals"
+	"extends": ["next", "next/core-web-vitals", "@sapphire"],
+	"rules": {
+		"react-hooks/exhaustive-deps": "off"
+	}
 }
