--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@sapphire/eslint-config": "^4.0.8",
+    "@sapphire/prettier-config": "^1.2.7",
+    "@sapphire/ts-config": "^3.1.6",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
