--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-next": "12.0.7",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.5",
+    "sass": "^1.45.2",
     "typescript": "4.5.4"
   },
   "packageManager": "yarn@3.1.1"
