--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@sapphire/ts-config": "^3.2.0",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
-    "eslint": "8.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
+    "eslint": "^8.8.0",
     "eslint-config-next": "12.0.9",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
     "sass": "^1.49.0",
