--- a/package.json
+++ b/package.json
@@ -57,8 +57,12 @@
 		"@types/react": "17.0.38",
 		"@types/react-color": "^3.0.6",
 		"@types/react-notifications-component": "^3.1.1",
-		"eslint": "8.8.0",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
+		"eslint": "^8.8.0",
 		"eslint-config-next": "12.0.9",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.2",
 		"nodemon": "^2.0.15",
