--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
 		"react-device-detect": "^2.1.2",
 		"react-dom": "17.0.2",
 		"react-dropzone": "^12.0.4",
-		"react-notifications-component": "3.4.1",
+		"react-notifications-component": "3.1.0",
 		"react-select": "^5.2.2",
 		"react-spinners": "^0.11.0",
 		"react-switch": "^6.0.0",
@@ -49,7 +49,7 @@
 		"@commitlint/config-angular": "^16.2.1",
 		"@sapphire/eslint-config": "^4.2.1",
 		"@sapphire/prettier-config": "^1.3.0",
-		"@sapphire/ts-config": "^3.3.1",
+		"@sapphire/ts-config": "3.2.0",
 		"@types/file-saver": "^2.0.5",
 		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
