--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
 		"express-rate-limit": "^6.2.1",
 		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
-		"framer-motion": "^6.2.6",
+		"framer-motion": "6.3.10",
 		"mime-types": "^2.1.34",
 		"minisearch": "^4.0.2",
 		"moment": "^2.29.1",
 		"multer": "^1.4.4",
 		"nanoid": "^3.3.0",
-		"next": "12.1.0",
+		"next": "12.1.6",
 		"prompts": "^2.4.2",
 		"react": "18.1.0",
 		"react-color": "^2.19.3",
@@ -54,7 +54,7 @@
 		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.1",
-		"@types/react": "17.0.39",
+		"@types/react": "18.0.11",
 		"@types/react-color": "^3.0.6",
 		"@types/react-notifications-component": "^3.1.1",
 		"@typescript-eslint/eslint-plugin": "^5.12.0",
