--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"chokidar": "^3.5.3",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"next": "12.1.6",
