--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@prisma/client": "^3.15.2",
 		"chokidar": "^3.5.3",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
@@ -36,6 +37,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^8.0.1",
 		"lint-staged": "^13.0.1",
+		"prisma": "^3.15.2",
 		"sass": "^1.52.3",
 		"typescript": "4.7.3"
 	},
