--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"chokidar": "^3.5.3",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"nanoid": "^4.0.0",
 		"next": "12.1.6",
 		"react": "18.1.0",
 		"react-dom": "18.1.0"
