--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^3.15.2",
+		"body-parser": "^1.20.0",
 		"chokidar": "^3.5.3",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"multer": "^1.4.5-lts.1",
 		"nanoid": "^4.0.0",
 		"next": "12.1.6",
 		"react": "18.1.0",
@@ -28,6 +30,7 @@
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/express": "^4.17.13",
+		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.8",
 		"@types/react": "18.0.12",
 		"@typescript-eslint/eslint-plugin": "^5.27.1",
