--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"multer": "^1.4.5-lts.1",
-		"nanoid": "^4.0.0",
 		"next": "12.1.6",
 		"react": "18.1.0",
-		"react-dom": "18.1.0"
+		"react-dom": "18.1.0",
+		"short-unique-id": "^4.4.4"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.0.2",
