--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
 		"@prisma/client": "^3.15.2",
 		"body-parser": "^1.20.0",
 		"chokidar": "^3.5.3",
+		"colorette": "^2.0.19",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"moment": "^2.29.3",
 		"multer": "^1.4.5-lts.1",
 		"next": "12.1.6",
 		"react": "18.1.0",
