--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"build": "yarn build:server && yarn build:app",
 		"build:server": "tsc --project src/server --outDir ./dist",
 		"build:app": "next build",
+		"prisma:generate": "prisma generate",
 		"start": "next start",
 		"lint": "next lint"
 	},
