chore: add github data (#128)
* chore: update package meta-data

* docs(Readme): update information

* docs(Security): add security policy

* chore: add github meta-data

* chore: update assets

* chore: add docker publish workflows

* docs(Readme): update email

* chore: add prisma:generate script

* chore: add pull request template

* chore: add pull request template

* docs(Readme): add warning

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nextjs-template",
+	"name": "paperplane",
 	"version": "3.0.0",
 	"main": "dist/src/server",
 	"private": true,
@@ -8,6 +8,7 @@
 		"build": "yarn build:server && yarn build:app",
 		"build:server": "tsc --project src/server --outDir ./dist",
 		"build:app": "next build",
+		"prisma:generate": "prisma generate",
 		"start": "next start",
 		"lint": "next lint"
 	},
