--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"colorette": "^2.0.19",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"express-rate-limit": "^6.4.0",
 		"moment": "^2.29.3",
 		"multer": "^1.4.5-lts.1",
 		"next": "12.1.6",
