--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -31,6 +31,4 @@ jobs:
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a # tag=v2
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
-          tags: |
-            ghcr.io/ijskoud/paperplane:dev
+          tags: ghcr.io/ijskoud/paperplane:dev
