--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,6 +32,4 @@ jobs:
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a # tag=v2
         with:
           push: true
-          platforms: linux/amd64,linux/arm64
-          tags: |
-            ghcr.io/ijskoud/paperplane:latest
+          tags: ghcr.io/ijskoud/paperplane:latest
