ci: do not run twice when PR is opened/updated

--- a/.github/workflows/general-tests.yml
+++ b/.github/workflows/general-tests.yml
@@ -1,5 +1,11 @@
-name: General Tests
-on: [push, pull_request]
+name: "Ci: Eslint & Build Testing"
+
+on:
+  push:
+    branches:
+      - "main"
+  pull_request:
+
 jobs:
   lint:
     name: ESLint
