--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^3.15.2",
+		"axios": "^0.27.2",
 		"body-parser": "^1.20.0",
 		"chokidar": "^3.5.3",
 		"colorette": "^2.0.19",
