--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.4.0",
 		"formik": "^2.2.9",
+		"framer-motion": "^6.3.15",
 		"moment": "^2.29.3",
 		"multer": "^1.4.5-lts.1",
 		"next": "12.1.6",
