--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"next": "12.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-dropzone": "^14.2.1",
 		"react-spinners": "^0.13.1",
 		"short-unique-id": "^4.4.4",
 		"yup": "^0.32.11"
