--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-dom": "18.2.0",
 		"react-dropzone": "^14.2.1",
 		"react-spinners": "^0.13.1",
+		"react-toastify": "^9.0.5",
 		"short-unique-id": "^4.4.4",
 		"yup": "^0.32.11"
 	},
