--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"express-rate-limit": "^6.4.0",
 		"formik": "^2.2.9",
 		"framer-motion": "^6.3.15",
+		"fuse.js": "^6.6.2",
 		"moment": "^2.29.3",
 		"multer": "^1.4.5-lts.1",
 		"next": "12.1.6",
