--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 		"formik": "^2.2.9",
 		"framer-motion": "^6.3.15",
 		"fuse.js": "^6.6.2",
+		"mime-types": "^2.1.35",
 		"moment": "^2.29.3",
+		"moment-timezone": "^0.5.34",
 		"multer": "^1.4.5-lts.1",
 		"next": "12.1.6",
 		"react": "18.2.0",
@@ -43,6 +45,7 @@
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/express": "^4.17.13",
+		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.8",
 		"@types/react": "18.0.14",
