--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"body-parser": "^1.20.0",
 		"chokidar": "^3.5.3",
 		"colorette": "^2.0.19",
+		"copy-to-clipboard": "^3.3.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.4.0",
