--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-dropzone": "^14.2.1",
+		"react-select": "^5.3.2",
 		"react-spinners": "^0.13.1",
 		"react-toastify": "^9.0.5",
 		"short-unique-id": "^4.4.4",
