--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-dropzone": "^14.2.1",
 		"react-select": "^5.3.2",
 		"react-spinners": "^0.13.1",
+		"react-switch": "^7.0.0",
 		"react-toastify": "^9.0.5",
 		"short-unique-id": "^4.4.4",
 		"yup": "^0.32.11"
