--- a/package.json
+++ b/package.json
@@ -19,18 +19,24 @@
 		"body-parser": "^1.20.0",
 		"chokidar": "^3.5.3",
 		"colorette": "^2.0.19",
+		"copy-to-clipboard": "^3.3.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.4.0",
 		"formik": "^2.2.9",
 		"framer-motion": "^6.3.15",
+		"fuse.js": "^6.6.2",
+		"mime-types": "^2.1.35",
 		"moment": "^2.29.3",
+		"moment-timezone": "^0.5.34",
 		"multer": "^1.4.5-lts.1",
 		"next": "12.1.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-dropzone": "^14.2.1",
+		"react-select": "^5.3.2",
 		"react-spinners": "^0.13.1",
+		"react-switch": "^7.0.0",
 		"react-toastify": "^9.0.5",
 		"short-unique-id": "^4.4.4",
 		"yup": "^0.32.11"
@@ -42,6 +48,7 @@
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/express": "^4.17.13",
+		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.8",
 		"@types/react": "18.0.14",
