--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"body-parser": "^1.20.0",
 		"chokidar": "^3.5.3",
 		"colorette": "^2.0.19",
+		"cookie-parser": "^1.4.6",
+		"cookies-next": "^2.0.5",
 		"copy-to-clipboard": "^3.3.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
@@ -47,6 +49,7 @@
 		"@sapphire/eslint-config": "^4.3.7",
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
+		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.13",
 		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
