--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"cookies-next": "^2.0.5",
 		"copy-to-clipboard": "^3.3.1",
 		"dotenv": "^16.0.1",
+		"embed-visualizer": "^1.2.1",
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.4.0",
 		"formik": "^2.2.9",
@@ -34,6 +35,7 @@
 		"multer": "^1.4.5-lts.1",
 		"next": "12.1.6",
 		"react": "18.2.0",
+		"react-color": "^2.19.3",
 		"react-dom": "18.2.0",
 		"react-dropzone": "^14.2.1",
 		"react-select": "^5.3.2",
@@ -55,6 +57,7 @@
 		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.8",
 		"@types/react": "18.0.14",
+		"@types/react-color": "^3.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.29.0",
 		"@typescript-eslint/parser": "^5.29.0",
 		"eslint": "^8.18.0",
