--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.4.0",
+		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^6.3.15",
 		"fuse.js": "^6.6.2",
@@ -52,6 +53,7 @@
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.13",
+		"@types/file-saver": "^2.0.5",
 		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.8",
