--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.4.0",
+		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^6.3.15",
 		"fuse.js": "^6.6.2",
@@ -34,6 +35,7 @@
 		"multer": "^1.4.5-lts.1",
 		"next": "12.1.6",
 		"react": "18.2.0",
+		"react-color": "^2.19.3",
 		"react-dom": "18.2.0",
 		"react-dropzone": "^14.2.1",
 		"react-select": "^5.3.2",
@@ -51,10 +53,12 @@
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.13",
+		"@types/file-saver": "^2.0.5",
 		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
 		"@types/node": "17.0.8",
 		"@types/react": "18.0.14",
+		"@types/react-color": "^3.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.29.0",
 		"@typescript-eslint/parser": "^5.29.0",
 		"eslint": "^8.18.0",
