--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,4 +32,4 @@ jobs:
         uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8 # tag=v3
         with:
           push: true
-          tags: ghcr.io/ijskoud/paperplane:latest
+          tags: ghcr.io/ijskoud/paperplane:v3
