--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.4.0",
+		"express-ws": "^5.0.2",
 		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^6.3.15",
@@ -53,6 +54,7 @@
 		"@sapphire/ts-config": "^3.3.4",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.13",
+		"@types/express-ws": "^3.0.1",
 		"@types/file-saver": "^2.0.5",
 		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
