--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
 	"dependencies": {
 		"@prisma/client": "^3.15.2",
 		"@tippyjs/react": "^4.2.6",
+		"@types/ws": "^8.5.3",
 		"axios": "^0.27.2",
 		"body-parser": "^1.20.0",
 		"chokidar": "^3.5.3",
 		"colorette": "^2.0.19",
+		"cookie": "^0.5.0",
 		"cookie-parser": "^1.4.6",
 		"cookies-next": "^2.0.5",
 		"copy-to-clipboard": "^3.3.1",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"express-rate-limit": "^6.4.0",
-		"express-ws": "^5.0.2",
 		"file-saver": "^2.0.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^6.3.15",
@@ -44,6 +45,7 @@
 		"react-switch": "^7.0.0",
 		"react-toastify": "^9.0.5",
 		"short-unique-id": "^4.4.4",
+		"ws": "^8.8.0",
 		"yup": "^0.32.11"
 	},
 	"devDependencies": {
@@ -52,9 +54,9 @@
 		"@sapphire/eslint-config": "^4.3.7",
 		"@sapphire/prettier-config": "^1.4.3",
 		"@sapphire/ts-config": "^3.3.4",
+		"@types/cookie": "^0.5.1",
 		"@types/cookie-parser": "^1.4.3",
 		"@types/express": "^4.17.13",
-		"@types/express-ws": "^3.0.1",
 		"@types/file-saver": "^2.0.5",
 		"@types/mime-types": "^2.1.1",
 		"@types/multer": "^1.4.7",
