--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"framer-motion": "^6.3.16",
 		"fuse.js": "^6.6.2",
 		"mime-types": "^2.1.35",
-		"moment": "^2.29.3",
+		"moment": "2.29.4",
 		"moment-timezone": "^0.5.34",
 		"multer": "^1.4.5-lts.1",
 		"next": "12.2.0",
