--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@prisma/client": "^4.0.0",
 		"@tippyjs/react": "^4.2.6",
+		"@types/ms": "^0.7.31",
 		"@types/ws": "^8.5.3",
 		"axios": "^0.27.2",
 		"body-parser": "^1.20.0",
@@ -34,6 +35,7 @@
 		"mime-types": "^2.1.35",
 		"moment": "2.29.4",
 		"moment-timezone": "^0.5.34",
+		"ms": "^2.1.3",
 		"multer": "^1.4.5-lts.1",
 		"next": "12.2.0",
 		"react": "18.2.0",
