--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.0.0",
+		"@sapphire/shapeshift": "^3.4.1",
 		"@tippyjs/react": "^4.2.6",
 		"@types/ms": "^0.7.31",
 		"@types/ws": "^8.5.3",
