ci(DockerDev): add usable platforms list

--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -30,5 +30,6 @@ jobs:
       - name: Build Docker Image
         uses: docker/build-push-action@c56af957549030174b10d6867f20e78cfd7debc5 # tag=v3
         with:
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/ijskoud/paperplane:dev
