--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   ghcr:
     name: Push Image to GitHub Packages
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Check out the repo
         uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3
