--- a/.github/workflows/general-tests.yml
+++ b/.github/workflows/general-tests.yml
@@ -1,4 +1,4 @@
-name: "Ci: Eslint & Build Testing"
+name: "ci: general tests"
 
 on:
   push:
@@ -7,41 +7,23 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    name: ESLint
+  all:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3
 
-      - name: Install Node v16
+      - name: Install Node v18
         uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3
         with:
-          node-version: 16
+          node-version: 18
+          cache: yarn
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: yarn install
 
       - name: Run ESLint
         run: yarn lint
 
-  typescript:
-    name: TypeScript
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3
-
-      - name: Install Node v16
-        uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3
-        with:
-          node-version: 16
-
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Generate Prisma Types
-        run: yarn prisma:generate
-
-      - name: TypeScript Compiler
+      - name: Run Compiler
         run: yarn build
