ci: add turbo repo caching

--- a/.github/workflows/general-tests.yml
+++ b/.github/workflows/general-tests.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   all:
     runs-on: ubuntu-latest
+    env:
+      TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3
