feat: add landing page (#220)
* chore(Deps): update next to v13.1.1

* fix: incorrect next package

* feat: add @paperplane/logo package

* feat: add logo's with resize prop

* fix: css bug fixes

* feat: update font weight

* fix(Logo): clip-path -> clipPath

* fix(Buttons): types issue

* feat(Web): add landing page

* fix: incorrect text sizing

* feat(Web): make landing responsive for mobile

--- a/packages/logo/package.json
+++ b/packages/logo/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@paperplane/buttons",
+	"name": "@paperplane/logo",
 	"version": "0.0.0",
 	"main": "./src/index.tsx",
 	"types": "./src/index.tsx",
@@ -15,8 +15,5 @@
 		"react": "^18.2.0",
 		"tsconfig": "*",
 		"typescript": "^4.5.2"
-	},
-	"dependencies": {
-		"next": "13.1.1"
 	}
 }
