feat: add navbar (#223)
* fix: dependency tree fix

* chore(Buttons): remove @ts-ignore comment

* feat(Buttons): add tranparent button

* feat(Buttons): add tranparent button

* feat(Buttons): update transparent button style

* feat: add base Navbar

* feat(Navbar): update base padding

* feat(Navbar): add Dashboard navbar

* fix: lockfile

* feat(Web): add dashboard page

* feat(BaseNavbar): add menu button

* feat(Navbar): add mobile design

--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@paperplane/logo",
+	"name": "@paperplane/navbar",
 	"version": "0.0.0",
 	"main": "./src/index.tsx",
 	"types": "./src/index.tsx",
@@ -8,6 +8,9 @@
 		"lint": "TIMING=1 eslint"
 	},
 	"dependencies": {
+		"@paperplane/buttons": "*",
+		"@paperplane/logo": "*",
+		"next": "13.1.1",
 		"react": "^18.2.0"
 	},
 	"devDependencies": {
