--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"@paperplane/buttons": "*",
+		"framer-motion": "^8.1.4",
 		"next": "13.1.1",
 		"react": "^18.2.0"
 	},
