--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
 		"@paperplane/logo": "*",
 		"@paperplane/modal": "*",
 		"@paperplane/navbar": "*",
+		"@paperplane/swr": "*",
 		"next": "13.1.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
