--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@paperplane/navbar",
+	"name": "@paperplane/swr",
 	"version": "0.0.0",
 	"main": "./src/index.tsx",
 	"types": "./src/index.tsx",
@@ -8,16 +8,9 @@
 		"lint": "TIMING=1 eslint"
 	},
 	"dependencies": {
-		"@paperplane/buttons": "*",
-		"@paperplane/logo": "*",
-		"@paperplane/markdown": "*",
-		"@paperplane/modal": "*",
-		"@paperplane/swr": "*",
-		"@paperplane/utils": "*",
 		"axios": "^1.2.2",
-		"next": "13.1.1",
 		"react": "^18.2.0",
-		"react-spinners": "^0.13.7"
+		"swr": "^2.0.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.22",
