--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,8 +8,13 @@
 		"start": "next start",
 		"lint": "next lint"
 	},
+	"peerDependencies": {
+		"@next/font": "^13.1.3",
+		"next": "^13.1.3",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
 	"dependencies": {
-		"@next/font": "^13.1.0",
 		"@paperplane/buttons": "*",
 		"@paperplane/forms": "*",
 		"@paperplane/logo": "*",
@@ -17,10 +22,7 @@
 		"@paperplane/ui": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.2.3",
-		"next": "13.1.1",
-		"rc-progress": "^3.4.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"rc-progress": "^3.4.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.0.0",
