--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
 	"resolutions": {
 		"@typescript-eslint/eslint-plugin": "^5.46.1"
 	},
+	"dependencies": {
+		"@next/font": "13.1.3",
+		"next": "^13.1.3",
+		"react": "18.2.0",
+		"react-dom": "^18.2.0"
+	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.3.0",
 		"@commitlint/config-angular": "^17.3.0",
@@ -32,7 +38,7 @@
 		"husky": "^8.0.2",
 		"is-ci": "^3.0.1",
 		"lint-staged": "^13.1.0",
-		"postcss": "^8.4.20",
+		"postcss": "^8.4.21",
 		"tailwindcss": "^3.2.4",
 		"turbo": "^1.6.3",
 		"typescript": "4.9.4"
