--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -7,8 +7,10 @@
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
+	"peerDependencies": {
+		"react": "^18.2.0"
+	},
 	"dependencies": {
-		"react": "^18.2.0",
 		"react-select": "^5.7.0"
 	},
 	"devDependencies": {
