--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -8,8 +8,10 @@
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
+	"peerDependencies": {
+		"react": "^18.2.0"
+	},
 	"dependencies": {
-		"react": "^18.2.0",
 		"react-markdown": "^8.0.4",
 		"remark-gfm": "^3.0.1"
 	},
