--- a/packages/modal/package.json
+++ b/packages/modal/package.json
@@ -7,11 +7,13 @@
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
+	"peerDependencies": {
+		"next": "^13.1.3",
+		"react": "^18.2.0"
+	},
 	"dependencies": {
 		"@paperplane/buttons": "*",
-		"framer-motion": "^8.1.4",
-		"next": "13.1.1",
-		"react": "^18.2.0"
+		"framer-motion": "^8.1.4"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.22",
