--- a/packages/navbar/package.json
+++ b/packages/navbar/package.json
@@ -7,6 +7,10 @@
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
+	"peerDependencies": {
+		"next": "^13.1.3",
+		"react": "^18.2.0"
+	},
 	"dependencies": {
 		"@paperplane/buttons": "*",
 		"@paperplane/logo": "*",
@@ -16,8 +20,6 @@
 		"@paperplane/utils": "*",
 		"axios": "^1.2.2",
 		"framer-motion": "^8.1.7",
-		"next": "13.1.1",
-		"react": "^18.2.0",
 		"react-spinners": "^0.13.7"
 	},
 	"devDependencies": {
