--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -7,9 +7,11 @@
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
+	"peerDependencies": {
+		"react": "^18.2.0"
+	},
 	"dependencies": {
 		"axios": "^1.2.2",
-		"react": "^18.2.0",
 		"swr": "^2.0.0"
 	},
 	"devDependencies": {
