--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,14 +7,16 @@
 	"scripts": {
 		"lint": "TIMING=1 eslint"
 	},
+	"peerDependencies": {
+		"react": "^18.2.0"
+	},
 	"dependencies": {
 		"@paperplane/forms": "*",
 		"@paperplane/navbar": "*",
 		"@paperplane/utils": "*",
 		"framer-motion": "^8.3.3",
 		"ms": "^2.1.3",
-		"rc-progress": "^3.4.1",
-		"react": "^18.2.0"
+		"rc-progress": "^3.4.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.22",
