--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,7 +8,7 @@
 		"start": "node ./dist",
 		"lint": "eslint src",
 		"dev:watch": "tsc --watch",
-		"start:dev": "NODE_ENV=development nodemon ./dist"
+		"dev": "NODE_ENV=development nodemon ./dist"
 	},
 	"peerDependencies": {
 		"next": "^13.1.3"
