fix: annoying css compiling bug

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo run build",
-		"start:dev": "turbo run dev --parallel --filter=!web",
+		"start:dev": "turbo run dev --parallel",
 		"lint": "turbo run lint",
 		"postinstall": "is-ci || husky install"
 	},
@@ -30,7 +30,6 @@
 		"@types/node": "18.11.17",
 		"@typescript-eslint/eslint-plugin": "^5.47.0",
 		"@typescript-eslint/parser": "^5.47.0",
-		"autoprefixer": "^10.4.13",
 		"eslint": "^8.30.0",
 		"eslint-config-next": "13.0.7",
 		"eslint-config-prettier": "^8.5.0",
@@ -38,7 +37,6 @@
 		"husky": "^8.0.2",
 		"is-ci": "^3.0.1",
 		"lint-staged": "^13.1.0",
-		"postcss": "^8.4.21",
 		"tailwindcss": "^3.2.4",
 		"turbo": "^1.6.3",
 		"typescript": "4.9.4"
