--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,8 +3,9 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
+		"dev": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/output.css --watch",
+		"build:css": "tailwindcss -i ./src/styles/globals.css -o ./src/styles/output.css",
+		"build": "yarn run build:css && next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
@@ -32,9 +33,7 @@
 		"@types/node": "^17.0.12",
 		"@types/react": "^18.0.22",
 		"@types/react-dom": "^18.0.7",
-		"autoprefixer": "10.4.13",
 		"eslint": "7.32.0",
-		"postcss": "^8.4.21",
 		"tailwindcss": "^3.2.4",
 		"typescript": "^4.5.3"
 	}
