--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"private": true,
 	"scripts": {
 		"build": "turbo run build",
+		"start": "yarn cmd:server start",
 		"start:dev": "turbo run dev --parallel",
 		"start:web:dev": "yarn workspace web run dev",
 		"start:server:dev": "yarn workspace server run dev:watch",
