--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,7 @@
 	"name": "@paperplane/ui",
 	"version": "0.0.0",
 	"license": "MIT",
+	"type": "module",
 	"main": "./src/index.ts",
 	"types": "./src/index.ts",
 	"scripts": {
