--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,7 +4,7 @@
 		"noUnusedParameters": false,
 		"useUnknownInCatchVariables": false,
 		"module": "ESNext",
-		"moduleResolution": "NodeNext"
+		"moduleResolution": "node"
 	},
 	"exclude": ["node_modules"]
 }
