--- a/tsconfig.next.json
+++ b/tsconfig.next.json
@@ -13,6 +13,7 @@
 		"incremental": true,
 		"esModuleInterop": true,
 		"module": "ESNext",
+		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve"
