fix: still not working

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@next/font": "13.3.1",
 		"next": "^13.3.1",
+		"prettier": "^2.8.8",
 		"react": "18.2.0",
 		"react-dom": "^18.2.0"
 	},
