--- a/packages/buttons/package.json
+++ b/packages/buttons/package.json
@@ -10,7 +10,8 @@
 	},
 	"peerDependencies": {
 		"next": "^13.3.1",
-		"react": "^18.2.0"
+		"react": "^18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.38",
