--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -9,14 +9,15 @@
 		"lint": "TIMING=1 eslint"
 	},
 	"peerDependencies": {
-		"react": "^18.2.0"
+		"react": "^18.2.0",
+		"react-dom": "18.2.0"
 	},
 	"dependencies": {
 		"react-select": "^5.7.2"
 	},
 	"devDependencies": {
-		"@types/react": "^18.0.38",
-		"@types/react-dom": "^18.0.11",
+		"@types/react": "^18.2.0",
+		"@types/react-dom": "^18.2.1",
 		"eslint": "8.39.0",
 		"typescript": "^5.0.4"
 	}
