--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,22 @@
 {
-	"extends": "../../tsconfig.next.json",
-	"include": ["next-env.d.ts", "huge-uploader.d.ts", "src/**/*.ts", "src/**/*.tsx"],
+	"extends": "../../tsconfig.json",
+	"compilerOptions": {
+		"target": "es5",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
+		"skipLibCheck": true,
+		"strict": true,
+		"forceConsistentCasingInFileNames": true,
+		"noEmit": true,
+		"esModuleInterop": true,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"jsx": "preserve",
+		"incremental": true,
+		"verbatimModuleSyntax": false,
+		"isolatedModules": true
+	},
+	"include": ["next-env.d.ts", "huge-uploader.d.ts", "**/*.ts", "**/*.tsx"],
 	"exclude": ["node_modules"]
 }
