--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,7 +1,7 @@
 {
-	"extends": "../../tsconfig.base.json",
+	"extends": "../../tsconfig.json",
 	"compilerOptions": {
 		"outDir": "../dist"
 	},
-	"include": ["src", "../../package.json"]
+	"include": ["**/*.ts", "**/*.tsx", "../../package.json"]
 }
