--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
 	},
 	"dependencies": {
 		"@next/font": "13.4.19",
+		"@radix-ui/react-slot": "^1.0.2",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.0.0",
+		"lucide-react": "^0.272.0",
 		"next": "^13.4.19",
+		"next-themes": "0.2.1",
 		"react": "18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"tailwind-merge": "^1.14.0",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.7.1",
