--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@paperplane/utils",
 	"version": "0.0.0",
+	"type": "module",
 	"main": "./src/index.ts",
 	"types": "./src/index.ts",
 	"license": "MIT",
