--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,7 +1,10 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"outDir": "../dist"
+		"outDir": "../dist",
+		"module": "ESNext",
+		"target": "ESNext",
+		"moduleResolution": "node"
 	},
 	"include": ["**/*.ts", "**/*.tsx", "../../package.json"]
 }
