--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
 		"@paperplane/forms": "*",
 		"@paperplane/logo": "*",
 		"@paperplane/swr": "*",
+		"@paperplane/ui": "*",
 		"@paperplane/utils": "*",
 		"axios": "^1.5.0",
 		"cors": "^2.8.5",
