--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.4.1"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.1",
 		"@next/font": "13.4.19",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
@@ -28,8 +29,10 @@
 		"next-themes": "0.2.1",
 		"react": "18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.45.4",
 		"tailwind-merge": "^1.14.0",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.22.2"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^17.7.1",
