feat(Ui): add table component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,8 @@
 		"form.tsx",
 		"dialog.tsx",
 		"avatar.tsx",
-		"sheet.tsx"
+		"sheet.tsx",
+		"table.tsx"
 	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
