feat(Ui): add switch component

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,7 +17,8 @@
 		"skeleton.tsx",
 		"toast.tsx",
 		"toaster.tsx",
-		"use-toast.ts"
+		"use-toast.ts",
+		"switch.tsx"
 	],
 	"scripts": {
 		"lint": "TIMING=1 eslint"
@@ -29,13 +30,14 @@
 	},
 	"dependencies": {
 		"@paperplane/utils": "*",
-		"@radix-ui/react-toast": "^1.1.4",
 		"@radix-ui/react-avatar": "^1.0.3",
 		"@radix-ui/react-dialog": "^1.0.4",
 		"@radix-ui/react-dropdown-menu": "^2.0.5",
 		"@radix-ui/react-label": "^2.0.2",
 		"@radix-ui/react-select": "^1.2.2",
-		"@radix-ui/react-slot": "^1.0.2"
+		"@radix-ui/react-slot": "^1.0.2",
+		"@radix-ui/react-switch": "^1.0.3",
+		"@radix-ui/react-toast": "^1.1.4"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.21",
