--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,13 +1,22 @@
 {
-	"extends": ["@sapphire/ts-config", "@sapphire/ts-config/extra-strict", "@sapphire/ts-config/verbatim"],
+	"extends": ["@sapphire/ts-config", "@sapphire/ts-config/extra-strict", "@sapphire/ts-config/verbatim", "@sapphire/ts-config/decorators"],
 	"compilerOptions": {
 		"noUnusedParameters": false,
 		"useUnknownInCatchVariables": false,
-		"module": "ESNext",
-		"moduleResolution": "node",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"outDir": "dist",
 		"skipLibCheck": true,
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"rootDir": "./src",
+		"paths": {
+			"#lib/*": ["./src/lib/*"],
+			"#components/*": ["./src/components/*"],
+			"#errors/*": ["./src/errors/*"],
+			"#trpc/*": ["./src/trpc/*"],
+			"#server.js": ["./src/Server.ts"],
+			"#trpc.js": ["./src/trpc/index.ts"]
+		}
 	},
 	"include": ["src/**/*.ts", "./types/*.d.ts"],
 	"exclude": ["node_modules"]
