feat(Web): add trpc handler

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -16,6 +16,9 @@
 		"incremental": true,
 		"verbatimModuleSyntax": false,
 		"isolatedModules": true,
+		"paths": {
+			"#trpc/*": ["./src/trpc/*"]
+		},
 		"plugins": [
 			{
 				"name": "next"
