refactor: move hook to lib/auth

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -17,7 +17,8 @@
 		"verbatimModuleSyntax": false,
 		"isolatedModules": true,
 		"paths": {
-			"#trpc/*": ["./src/trpc/*"]
+			"#trpc/*": ["./src/trpc/*"],
+			"#lib/*": ["./src/lib/*"]
 		},
 		"plugins": [
 			{
