--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -5,7 +5,8 @@
 		"useUnknownInCatchVariables": false,
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
-		"outDir": "dist",
+		"outDir": "./dist",
+		"noEmit": false,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"rootDir": "./src",
