--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react": "18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.46.1",
+		"react-syntax-highlighter": "15.5.0",
 		"superjson": "^1.13.1",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7",
