--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -13,6 +13,7 @@
 		"typescript": "^5.2.2"
 	},
 	"dependencies": {
-		"@sapphire/timestamp": "^1.0.1"
+		"@sapphire/timestamp": "^1.0.1",
+		"axios": "1.5.1"
 	}
 }
